# sabesp

./: .editorconfig  .gitignore  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
alarmes/: admin.py  apps.py  models.py
alarmes/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
alarmes/migrations/: 0001_initial.py  0002_alter_alarme_table.py  0003_alter_alarme_options.py
core/: settings.py  urls.py
dashboard/: views.py
leituras/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
leituras/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
leituras/migrations/: 0001_initial.py  0002_alter_relatorio_options.py  0002_remove_leitura_competencia_remove_leitura_unidade.py  0002_remove_relatoriocriado_relatorioevento_ptr_and_more.py  0003_alter_condominio_nome.py  0003_alter_folha_relatorio.py  0003_remove_folha_leitura_remove_leitura_created_at_and_more.py  0004_alter_folha_options.py  0004_alter_leitura_options_alter_relatorio_options.py  0005_remove_leitura_hora_leitura_and_more.py  0005_rename_fria_quente_leitura_tipo_leitura_hora_leitura_and_more.py  0006_alter_leitura_status_valvula.py  0007_alter_leitura_status_valvula.py
nginx/: default.conf
oauth/: serializers.py  views.py
static/src/: input.css  output.css
templates/: _base.html  header.html
templates/dashboard/: index.html
templates/leituras/: add.html  delete.html  edit.html
templates/registration/: login.html
unidades/: admin.py  models.py  urls.py  views.py
(+10 files in other folders)
