[tool.poetry]
name = "sabesp"
version = "0.1.0"
description = ""
authors = ["Pedro <pedro357bm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
black = "^23.7.0"
django-compressor = "^4.4"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
djangorestframework-simplejwt = "^5.3.0"
openpyxl = "^3.1.2"
django-pghistory = "^2.8.0"
psycopg2 = "^2.9.7"
django-pgconnection = "^1.0.3"
django-pgtrigger = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
